= 3.43.1 (2021-04-13)

* [SECURITY] Fix issue where loading content_security_policy plugin after default_headers plugin had no effect (jeremyevans)

= 3.43.0 (2021-04-12)

* Add host_authorization plugin, for checking that requests are submitted using an approved host (jeremyevans)

= 3.42.0 (2021-03-12)

* Make Roda.plugin support plugins using keyword arguments in Ruby 3 (jeremyevans)

* Make Roda.use support middleware using keyword arguments in Ruby 3 (pat) (#207)

* Support common_logger plugin :method option for specifying the method to call on the logger (fnordfish, jeremyevans) (#206)

* Add recheck_precompiled_assets plugin for checking for updates to the precompiled asset metadata file (jeremyevans)

* Make compile_assets class method in assets plugin use an atomic approach to writing precompiled metadata file (jeremyevans)

= 3.41.0 (2021-02-17)

* Improve view performance with :content option up to 3x by calling compiled template methods directly (jeremyevans)

= 3.40.0 (2021-01-14)

* Add freeze_template_caches! to the precompile_templates plugin, which ensures all templates are precompiled, and speeds up template access (jeremyevans)

* Add precompile_views to the precompile_templates plugin, which precompiles the optimized render methods (jeremyevans)

* Have RodaCache#freeze return the frozen internal hash (which no longer needs a mutex for thread-safety) (jeremyevans)

* Speed up the view method in the render plugin even more when freezing the application (jeremyevans)

* Speed up the view method in the render plugin when called with a single argument (jeremyevans)

= 3.39.0 (2020-12-15)

* Speed up relative_path plugin if relative_path or relative_prefix is called more than once (jeremyevans)

* Avoid method redefinition warnings in verbose warning mode (jeremyevans)

* Make typecast_params.convert! handle explicit nil values the same as missing values (jeremyevans)

= 3.38.0 (2020-11-16)
